<resources>
    <string name="app_name">Newpsel</string>
    <string name="label_signup">Sign up</string>
    <string name="label_signin">Sign in</string>
    <string name="label_add_feed">Add feed</string>
    <string name="label_labels_list">Labels</string>
    <string name="label_labels_create">Create Label</string>
    <string name="action_about">About</string>
    <string name="action_create_feed">Create Feed</string>
    <string name="action_save">Save</string>
    <string name="action_labels">Labels</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_drop_db">Drop DB</string>
    <string name="action_check">Check this</string>
    <string name="action_speech">Speech</string>
    <string name="activity_articles">New articles</string>
    <string name="ts_successfully_saved">Page successfully saved to </string>
    <string name="error_304">Username already exists</string>
    <string name="error_305">Email already exists</string>
    <string name="error_306">Wrong feed url</string>
    <string name="error_310">Try again later</string>
    <string name="error_311">Username is required!</string>
    <string name="error_312">Email is required!</string>
    <string name="error_313">Password is required!</string>
    <string name="create_feed">Create feed</string>
    <string name="Feed">Feed</string>
    <string name="Feeds">Feeds</string>
    <string name="feed_list_empty">You do not have feeds</string>
    <string name="Title">Title</string>
    <string name="try_later">Try again in few minutes</string>
    <string name="error_connection">No connection to Internet</string>
    <string name="error_unknown">Error: Unknown error (see log)</string>
    <string name="error_http_unauthorized">Error: 401 unauthorized</string>
    <string name="error_http_forbidden">Error: 403 forbidden</string>
    <string name="error_http_not_found">Error: 404 not found</string>
    <string name="error_http_server_error">Error: 500 server error</string>
    <string name="error_http_other_error">Error: other HTTP error (see log)</string>
    <string name="error_ssl_rejected">Error: SSL certificate rejected</string>
    <string name="error_parse_error">Error: JSON parse failed</string>
    <string name="error_io_error">Error: I/O failure (server down?)</string>
    <string name="error_other_error">Error: unknown error (see log)</string>
    <string name="error_api_disabled">Error: Please enable external API access in tt-rss Settings - Advanced</string>
    <string name="error_api_unknown">Error: unknown API error (see log)</string>
    <string name="error_api_incorrect_usage">Error: incorrect API usage</string>
    <string name="error_login_failed">Error: username or password incorrect</string>
    <string name="error_invalid_api_url">Error: invalid API URL</string>
    <string name="error_ssl_hostname_rejected">Error: SSL hostname not verified</string>
    <string name="error_api_unknown_method">Error: unknown API method</string>
    <string name="error_network_unavailable">Error: network unavailable</string>
    <string name="error_language_tts">Sorry! Your device doesn\'t have %1$s language installed.</string>
    <string name="label_s">label</string>
    <string name="button_sync">sync</string>
    <string name="button_mark_all">all as read</string>
    <string name="button_add_feed">add feed</string>
    <string name="sync_finished">Sync finished</string>
    <string name="button_share">Share</string>
    <string name="no_new_articles">Aren\'t new articles</string>
    <string name="drawer_item_unread">Unread articles</string>
    <string name="drawer_item_all">All articles</string>
    <string name="drawer_item_dictate">Dictation articles</string>
    <string name="button_dictate">Dictate</string>
    <string name="button_read_item">Read item</string>
    <string name="button_unread_item">Unread item</string>
    <string name="button_read_label">Label</string>
    <string name="button_start_dictate">Start dictate</string>
    <string name="button_read_dictate">Dictate</string>
    <string name="button_read_stop">Stop</string>
    <string name="button_pause">Pause</string>
    <string-array name="feeds_list_array">
        <item>@string/drawer_item_unread</item>
        <item>@string/drawer_item_all</item>
        <item>@string/drawer_item_dictate</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_url">Url</string>
    <string name="button_sign_in">Sign in</string>
    <string name="button_sign_up">Sign up</string>
    <string name="button_submit">Submit</string>
    <string name="color_read">#d3d3d3</string>
    <string name="color_unread">#f9f9f9</string>
    <string name="feed_title">Feed</string>
    <string name="is_stared">is stared</string>
    <string name="is_unread">is unread</string>
    <string name="has_label">has label</string>
    <string name="cm_mark_read">Mark as read</string>
    <string name="cm_mark_unread">Mark as unread</string>
    <string name="cm_mark_previous">Mark previous as read</string>
    <string name="cm_add_star">Add star</string>
    <string name="cm_remove_star">Remove star</string>
    <string name="cm_share">Share</string>
    <string name="about_label">About</string>
    <string name="about_nps">Newpsle is under development and currently it\'s in alpha version. It will have different futures with which you will spend less time selecting preferred news and save/share them. So for now Newpsel is simple RSS feeds reader but soon will come future functionality.</string>
    <string name="about_version">Current version: </string>
    <string name="about_status">(alpha)</string>
    <string name="about_web">Web:</string>
    <string name="app_web_url">www.newpsel.com</string>
    <string name="about_author">Author:</string>
    <string name="about_author_name">Denys Pasishnyi (@dpcat237)</string>
    <string name="about_write">Email:</string>
    <string name="about_email">newpsel@gmail.com</string>
    <string name="button_create_label">create label</string>
    <string name="txt_label">Label</string>
    <string name="txt_removed">removed</string>
    <string name="txt_successful_set_label">Set label</string>
    <string name="nt_download">Download notification</string>
    <string name="nt_download_items_title_finished">Downloaded new dictations of headlines</string>
    <string name="nt_download_dictation_items_finished">Downloaded new dictations of saved articles</string>
    <string name="button_details">Show details</string>
    <string name="button_add_label">Add label</string>
    <string name="button_backward">Backward</string>
    <string name="button_stop">Stop</string>
    <string name="button_forward">Forward</string>
    <string name="button_pause_play">Play / Pause</string>
    <string name="notification_last_track">Player stopped because was last track</string>
    <string name="player_nt_finish_titles">Finished dictation of headlines</string>
    <string name="player_start_problem">Are some problem to play this song</string>
    <string name="label_st">Settings</string>
    <string name="st_design">Design</string>
    <string name="st_text_size">Text size</string>
    <string name="st_text_size_s">Adjust size of article text</string>
    <string-array name="st_text_size_list_titles">
        <item>Smallest</item>
        <item>Smaller</item>
        <item>Normal</item>
        <item>Larger</item>
        <item>Largest</item>
    </string-array>
    <string-array name="st_text_size_list_values">
        <item>50</item>
        <item>75</item>
        <item>100</item>
        <item>150</item>
        <item>200</item>
    </string-array>
    <string name="st_list_size">List size</string>
    <string name="st_list_size_s">Adjust size of list text</string>
    <string-array name="st_list_size_list_titles">
        <item>Smaller</item>
        <item>Normal</item>
        <item>Larger</item>
    </string-array>
    <string-array name="st_list_size_list_values">
        <item>14</item>
        <item>17</item>
        <item>20</item>
    </string-array>
    <string name="st_dictation_speed">Dictation speed</string>
    <string name="st_dictation_speed_s">Adjust dictation speed</string>
    <string-array name="st_list_dictation_speed_titles">
        <item>Slow</item>
        <item>Normal</item>
        <item>Fast</item>
        <item>Very Fast</item>
    </string-array>
    <string-array name="st_list_dictation_speed_values">
        <item>1.0f</item>
        <item>1.5f</item>
        <item>2.0f</item>
        <item>2.5f</item>
    </string-array>
    <string name="st_dictation_quantity">Quantity of later articles</string>
    <string name="st_dictation_quantity_s">Adjust limit of dictations in device</string>
    <string-array name="st_list_dictation_quantity">
        <item>25</item>
        <item>50</item>
        <item>100</item>
        <item>150</item>
    </string-array>
    <string name="st_other">Other</string>
    <string name="st_dictation_preferences">Dictation preferences</string>
    <string name="st_dictations_download_title">Configure dictations download</string>
    <string name="st_dictation_titles">Titles dictation</string>
    <string name="st_download_preferences">Download preferences</string>
    <string name="st_dictation_enable_titles">Activate to enable dictation of news titles</string>
    <string name="st_dictation_later">Later articles dictation</string>
    <string name="st_dictation_enable_later">Activate to enable dictation of saved articles</string>
    <string name="st_download_wifi_enable">Enable download via WIFI</string>
    <string name="st_download_wifi_enable_text">Activate to enable download dictations via WIFI</string>
    <string name="st_download_mobile_enable">Enable download via mobile data</string>
    <string name="st_download_mobile_enable_text">Activate to enable download dictations via mobile data</string>
    <string name="st_notifications">Notifications</string>
    <string name="st_notifications_enable">Enable notifications</string>
    <string name="st_dictation_label">Dictation label</string>
    <string name="st_dictation_label_select">Select label which articles you want listen</string>
    <string name="st_services">Services</string>
    <string name="st_items_download">Download news</string>
    <string name="st_items_download_check">Activate to enable news download</string>
    <string name="st_battery_level_title">Min battery level</string>
    <string name="st_battery_level_s">Adjust minimum level of battery to download dictations</string>
    <string-array name="st_list_st_battery_level_titles">
        <item>30%</item>
        <item>40%</item>
        <item>50%</item>
        <item>60%</item>
    </string-array>
    <string-array name="st_list_st_battery_level_values">
        <item>30.0f</item>
        <item>40.0f</item>
        <item>50.0f</item>
        <item>60.0f</item>
    </string-array>
    <string name="hello_world">Now Playing:</string>
    <string name="inital_Time">0 min, 0 sec</string>
    <string name="widget_title">Newpsel - Dictations widget</string>
    <string name="widget_title_query_empty">Newpsel - Dictations widget</string>
</resources>