<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
            android:title="@string/st_design">
        <ListPreference
	        android:defaultValue="100"
	        android:entries="@array/st_text_size_list_titles"
	        android:entryValues="@array/st_text_size_list_values"
	        android:key="pref_text_size"
	        android:negativeButtonText="@null"
	        android:positiveButtonText="@null"
	        android:title="@string/st_text_size"
	        android:summary="@string/st_text_size_s" />
        <ListPreference
	        android:defaultValue="2"
	        android:entries="@array/st_list_size_list_titles"
	        android:entryValues="@array/st_list_size_list_values"
	        android:key="pref_list_size"
	        android:negativeButtonText="@null"
	        android:positiveButtonText="@null"
	        android:title="@string/st_list_size"
	        android:summary="@string/st_list_size_s" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/st_notifications">
        <CheckBoxPreference
            android:title="@string/st_notifications_enable"
            android:key="pref_notifications_enable"
            android:summary="@string/st_notifications_enable_check"
            android:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/st_services">
        <CheckBoxPreference
            android:title="@string/st_items_download"
            android:key="pref_items_download_enable"
            android:summary="@string/st_items_download_check"
            android:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/st_other">
        <PreferenceScreen android:title="@string/st_dictation_preference">
            <PreferenceCategory android:title="@string/st_download_preferences">
                <CheckBoxPreference
                    android:title="@string/st_download_wifi_enable"
                    android:key="pref_dictation_wifi_enable"
                    android:summary="@string/st_download_wifi_enable_text"
                    android:defaultValue="true" />
                <CheckBoxPreference
                    android:title="@string/st_download_mobile_enable"
                    android:key="pref_dictation__mobile_enable"
                    android:summary="@string/st_download_mobile_enable_text"
                    android:defaultValue="false" />
            </PreferenceCategory>
            <PreferenceCategory android:title="@string/st_dictation_titles">
                <CheckBoxPreference
                    android:title="@string/st_dictation_enable"
                    android:key="pref_dictation_title_enable"
                    android:summary="@string/st_dictation_enable_titles"
                    android:defaultValue="false"/>
            </PreferenceCategory>
            <PreferenceCategory android:title="@string/st_dictation_later">
                <CheckBoxPreference
                    android:title="@string/st_dictation_enable"
                    android:key="pref_dictation_later_enable"
                    android:summary="@string/st_dictation_enable_later"
                    android:defaultValue="false" />
                <ListPreference
                    android:dependency="pref_dictation_later_enable"
                    android:key="dictation_label_id"
                    android:title="@string/st_dictation_label"
                    android:dialogTitle="@string/st_dictation_label"
                    android:summary="@string/st_dictation_label_select"
                    />
            </PreferenceCategory>
        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>