<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:padding="5dp" >

    <ImageButton
        android:id="@+id/buttonDetails"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:contentDescription="@string/button_details"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="@dimen/status_bar_button_info_container_padding_left" >

        <TextView
            android:id="@+id/songListTitle"
            style="@style/StatusBarText"
            android:textColor="@color/grey_light"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:id="@+id/songTitle"
            style="@style/StatusBarText"
            android:textColor="@color/grey_dark" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/buttonAddLabel"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_marginBottom="13dp"
        android:layout_marginTop="13dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/button_add_label"
        android:scaleType="fitCenter"
        android:src="@drawable/collections_labels_white" />

    <ImageButton
        android:id="@+id/buttonPausePlay"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_margin="13dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/button_pause_play"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_activity_pause" />

    <ImageButton
        android:id="@+id/buttonForward"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_marginBottom="13dp"
        android:layout_marginTop="13dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/button_forward"
        android:scaleType="fitCenter"
        android:src="@drawable/av_next" />

    <ImageButton
        android:id="@+id/buttonRemove"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_marginBottom="13dp"
        android:layout_marginTop="13dp"
        android:layout_marginLeft="5dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/button_stop"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_notification_cancel" />

</LinearLayout>